FORGE-574: Further fixes